--- a/rugby-videos-manifest.json
+++ b/rugby-videos-manifest.json
@@ -1,40 +1,128 @@
 {
   "category": [
     {
-      "name": "Rugby Wallpapers HD",
+      "name": "Rugby Super Hits Video Highlights",
       "wallpaper": [
         {
           "attribution": null,
           "author": "Rugby Hits",
-          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
+          "author_url": "https://www.rugbyworldcup.com/",
           "license_name": "CC-BY-2.0",
           "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "",
+          "name": "All Blacks welcomed to Rugby World Cup 2015",
           "source": "",
           "thumbUrl": "",
-          "url": "_oEA18Y8gM0"
+          "url": "As2AhjUTows"
         },
         {
           "attribution": null,
           "author": "Rugby Hits",
-          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
+          "author_url": "https://www.rugbyworldcup.com/",
           "license_name": "CC-BY-2.0",
           "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "",
+          "name": "South Africa vs Japan - 2015 Rugby World ",
           "source": "",
           "thumbUrl": "",
-          "url": "HFhw6k-k0zA"
+          "url": "V37Ko4pvioA"
         },
         {
           "attribution": null,
           "author": "Rugby Hits",
-          "author_url": "http://www.hdwallpapersn.com/rugby-pictures.html",
+          "author_url": "https://www.rugbyworldcup.com/",
           "license_name": "CC-BY-2.0",
           "license_url": "https://creativecommons.org/licenses/by/2.0/",
-          "name": "",
+          "name": "Rugby World Cup 2015 SOUTH AFRICA vs JAPAN 1st HALF",
           "source": "",
           "thumbUrl": "",
-          "url": "mD7o-wVKO9Y"
+          "url": "4J6TVWzIfaw"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby Hits",
+          "author_url": "https://www.rugbyworldcup.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Rugby World Cup 2015 Opening Ceremony intro",
+          "source": "",
+          "thumbUrl": "",
+          "url": "Z3Mbd9W9u50"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby Hits",
+          "author_url": "https://www.rugbyworldcup.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Rugby World Cup 2015 Opening Ceremony",
+          "source": "",
+          "thumbUrl": "",
+          "url": "kQI0Fjsu61w"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby Hits",
+          "author_url": "https://www.rugbyworldcup.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "England vs Fiji - 2015 Rugby World Cup Opener Highlights",
+          "source": "",
+          "thumbUrl": "",
+          "url": "6x2zg31fAZM"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby Hits",
+          "author_url": "https://www.rugbyworldcup.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Japan Reaction: Fantastic for Japanese rugby - Jones",
+          "source": "",
+          "thumbUrl": "",
+          "url": "b7wIcSHFre8"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby Hits",
+          "author_url": "https://www.rugbyworldcup.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Canada Reaction: Ireland exposed our flaws - Kieran Crowley",
+          "source": "",
+          "thumbUrl": "",
+          "url": "KQBabFUVac0"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby Hits",
+          "author_url": "https://www.rugbyworldcup.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Japan's emotional celebrations after unbelievable win over South Africa!",
+          "source": "",
+          "thumbUrl": "",
+          "url": "JXhrwadiFQ4"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby Hits",
+          "author_url": "https://www.rugbyworldcup.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "England v Fiji: Rugby World Cup 2015 - Puggle Predictor",
+          "source": "",
+          "thumbUrl": "",
+          "url": "BUuSKP5-4-4"
+        },
+        {
+          "attribution": null,
+          "author": "Rugby Hits",
+          "author_url": "https://www.rugbyworldcup.com/",
+          "license_name": "CC-BY-2.0",
+          "license_url": "https://creativecommons.org/licenses/by/2.0/",
+          "name": "Ireland v Canada 50-7 - Full Match Highlights & Tries",
+          "source": "",
+          "thumbUrl": "",
+          "url": "RMhh9mY7ozs"
         }
 
       ]
