--- a/rugby-walls-manifest.json
+++ b/rugby-walls-manifest.json
@@ -21,9 +21,9 @@
           "license_name": "CC-BY-2.0",
           "license_url": "https://creativecommons.org/licenses/by/2.0/",
           "name": "",
-          "source": "https://lh3.googleusercontent.com/-Ci8l_be3vas/Vf0_i5SetlI/AAAAAAAAEN0/uqtbtO9X1Zg/s720-Ic42/Rugby-Pictures-1.jpg",
-          "thumbUrl": "https://lh3.googleusercontent.com/-Ci8l_be3vas/Vf0_i5SetlI/AAAAAAAAEN0/uqtbtO9X1Zg/s720-Ic42/Rugby-Pictures-1.jpg",
-          "url": "https://lh3.googleusercontent.com/-Ci8l_be3vas/Vf0_i5SetlI/AAAAAAAAEN0/uqtbtO9X1Zg/s720-Ic42/Rugby-Pictures-1.jpg"
+          "source": "https://upload.wikimedia.org/wikipedia/commons/7/73/Xenu_space_plane.jpg",
+          "thumbUrl": "https://upload.wikimedia.org/wikipedia/commons/7/73/Xenu_space_plane.jpg",
+          "url": "https://upload.wikimedia.org/wikipedia/commons/7/73/Xenu_space_plane.jpg"
         },
         {
           "attribution": null,
