--- a/cars-manifest.json
+++ b/cars-manifest.json
@@ -38,7 +38,7 @@
         },
         {
           "attribution": null,
-          "author": "Unsplash.com,
+          "author": "Unsplash.com",
           "author_url": "https://unsplash.com/photos/0GyzS1Hjjko",
           "license_name": "CC0 License",
           "license_url": "https://creativecommons.org/publicdomain/zero/1.0/",
@@ -49,7 +49,7 @@
         },
         {
           "attribution": null,
-          "author": "Unsplash.com,
+          "author": "Unsplash.com",
           "author_url": "https://unsplash.com/photos/0GyzS1Hjjko",
           "license_name": "CC0 License",
           "license_url": "https://creativecommons.org/publicdomain/zero/1.0/",
@@ -60,7 +60,7 @@
         },
         {
           "attribution": null,
-          "author": "Unsplash.com,
+          "author": "Unsplash.com",
           "author_url": "https://unsplash.com/photos/0GyzS1Hjjko",
           "license_name": "CC0 License",
           "license_url": "https://creativecommons.org/publicdomain/zero/1.0/",
@@ -82,7 +82,7 @@
         },
         {
           "attribution": null,
-          "author": "Unsplash.com,
+          "author": "Unsplash.com",
           "author_url": "https://unsplash.com/photos/0GyzS1Hjjko",
           "license_name": "CC0 License",
           "license_url": "https://creativecommons.org/publicdomain/zero/1.0/",
@@ -104,7 +104,7 @@
         },
         {
           "attribution": null,
-          "author": "Unsplash.com,
+          "author": "Unsplash.com",
           "author_url": "https://unsplash.com/photos/0GyzS1Hjjko",
           "license_name": "CC0 License",
           "license_url": "https://creativecommons.org/publicdomain/zero/1.0/",
@@ -126,7 +126,7 @@
         },
         {
           "attribution": null,
-          "author": "Unsplash.com,
+          "author": "Unsplash.com",
           "author_url": "https://unsplash.com/photos/0GyzS1Hjjko",
           "license_name": "CC0 License",
           "license_url": "https://creativecommons.org/publicdomain/zero/1.0/",
@@ -137,7 +137,7 @@
         },
         {
           "attribution": null,
-          "author": "Unsplash.com,
+          "author": "Unsplash.com",
           "author_url": "https://unsplash.com/photos/0GyzS1Hjjko",
           "license_name": "CC0 License",
           "license_url": "https://creativecommons.org/publicdomain/zero/1.0/",
@@ -148,7 +148,7 @@
         },
         {
           "attribution": null,
-          "author": "Unsplash.com,
+          "author": "Unsplash.com",
           "author_url": "https://unsplash.com/photos/0GyzS1Hjjko",
           "license_name": "CC0 License",
           "license_url": "https://creativecommons.org/publicdomain/zero/1.0/",
@@ -159,7 +159,7 @@
         },
         {
           "attribution": null,
-          "author": "Unsplash.com,
+          "author": "Unsplash.com",
           "author_url": "https://unsplash.com/photos/0GyzS1Hjjko",
           "license_name": "CC0 License",
           "license_url": "https://creativecommons.org/publicdomain/zero/1.0/",
@@ -170,7 +170,7 @@
         },
         {
           "attribution": null,
-          "author": "Unsplash.com,
+          "author": "Unsplash.com",
           "author_url": "https://unsplash.com/photos/0GyzS1Hjjko",
           "license_name": "CC0 License",
           "license_url": "https://creativecommons.org/publicdomain/zero/1.0/",
@@ -181,7 +181,7 @@
         },
         {
           "attribution": null,
-          "author": "Unsplash.com,
+          "author": "Unsplash.com",
           "author_url": "https://unsplash.com/photos/0GyzS1Hjjko",
           "license_name": "CC0 License",
           "license_url": "https://creativecommons.org/publicdomain/zero/1.0/",
@@ -192,7 +192,7 @@
         },
         {
           "attribution": null,
-          "author": "Unsplash.com,
+          "author": "Unsplash.com",
           "author_url": "https://unsplash.com/photos/0GyzS1Hjjko",
           "license_name": "CC0 License",
           "license_url": "https://creativecommons.org/publicdomain/zero/1.0/",
@@ -203,7 +203,7 @@
         },
         {
           "attribution": null,
-          "author": "Unsplash.com,
+          "author": "Unsplash.com",
           "author_url": "https://unsplash.com/photos/0GyzS1Hjjko",
           "license_name": "CC0 License",
           "license_url": "https://creativecommons.org/publicdomain/zero/1.0/",
